доработка существующих страниц

--- a/src/app/about-volunteers/about-volunteers.component.html
+++ b/src/app/about-volunteers/about-volunteers.component.html
@@ -1,4 +1,7 @@
-<p>Здесь должен описывать процесс становления волонтером</p>
+<!-- <p>Здесь должен описывать процесс становления волонтером</p> -->
+
+<app-slider></app-slider>
+
 <!-- <ng-image-slider [images]="imgCollection" #nav></ng-image-slider> -->
 
 <!-- <ngb-carousel *ngIf="images">
