--- a/src/app/cordons/cordons.component.html
+++ b/src/app/cordons/cordons.component.html
@@ -1,1 +1,84 @@
-<p>Здесь должна быть информация о кордонах</p>
+<section class="containers">
+    <div class="section first">
+      <div class="cont_title">
+        <h1>Озерный</h1>
+      </div>
+      <div class="cont_desc">
+        <p>
+            На кордоне «Озерный» построены две кухни, оборудованные холодильником, газовой плитой и холодным водоснабжением. 
+            На территории есть генератор, который работает в дневное время суток. Четыре
+            туалета. В инспекторском домике есть стиральная машина, душевая и баня. На кухне есть все необходимое для
+            приготовления и приема пищи. Возможности готовить самому себе нет. 
+            Будьте готовы, что кордон огорожен электро-забором, все время вы будете проводить на 
+            ограниченной территории. На кордоне волонтеры живут в полевых условиях. Лучше взять с собой палатку, а также взять спальник, коврик и все необходимое 
+            для жизни в палатке.
+        </p>
+      </div>
+    </div>
+    <div class="section">
+      <div class="cont_title">
+        <h1>Травяной</h1>
+      </div>
+      <div class="cont_desc">
+        <p>
+            Кордон «Травяной» отличается от кордона «Озерный» количеством туристов, в первую очередь. В течение сезона одна группа
+            сменяет другую. Кордон исключает массовое количество посетителей, так как однодневные эколого-познавательные экскурсии
+            здесь не проводятся. Инфраструктура на кордоне подходит для длительного и комфортного проживания. Есть инспекторский 
+            дом, вип-дом для проживания туристов, баня, санузел. Палатка и все сопутствующее снаряжение для палаточного проживания 
+            здесь не нужны.
+        </p>
+      </div>
+    </div>
+    <div class="section">
+      <div class="cont_title">
+        <h1>Долина гейзеров</h1>
+      </div>
+      <div class="cont_desc">
+        <p>
+            На кордоне есть: визит-центр, который вмещает кухню-столовую, сувенирную лавку, 
+            комнаты для размещения туристов и персонала; инспекторский дом, дом для проживания волонтеров и работников заповедника;
+            туалеты; душевая. Присутствует система холодного водоснабжения. Питьевая вода привозится на кордон
+            вертолетом, или приносится из ручья. Есть стиральная машина. 
+            На кухне трудится повар заповедника. На кухне есть все
+            необходимое для приготовления и приема пищи. Есть генератор, который работает несколько часов. Также функционирует 
+            спутниковый интернет, но используется он в нуждах связи государственных инспекторов с администрацией заповедника.
+            Вы можете воспользоваться интернетом для связи с родными.
+        </p>
+      </div>
+    </div>
+    <div class="section">
+      <div class="cont_title">
+        <h1>Узон</h1>
+      </div>
+      <div class="cont_desc">
+        <p>
+            Находится в 10 минутах лета от Долины гейзеров. 
+            Немного отличается инфраструктура. На этом кордоне нет повара, поэтому приготовлением пищи занимаются добровольцы.
+        </p>
+      </div>
+    </div>
+    <div class="section">
+      <div class="cont_title">
+        <h1>Исток и Аэродром</h1>
+      </div>
+      <div class="cont_desc">
+        <p> 
+            На кордонах есть все необходимое для проживания. Жилые модули и инспекторские дома, генераторы, холодное водоснабжение
+            (с технической водой), туалеты, бани. Кухни-столовые оснащены всем необходимым для приготовления и приема пищи, спутниковый
+            интернет. 
+        </p>
+      </div>
+    </div>
+    <div class="section">
+        <div class="cont_title">
+          <h1>Кроноки и Семячик</h1>
+        </div>
+        <div class="cont_desc">
+          <p>
+            Так как туристы практически не посещают данные кордоны, они используются лишь в природоохранных и научных целях.
+            Здесь проживают сотрудники заповедника, которым нужна помощь в хозяйственных и строительных работах. Инфраструктура и
+            хозяйственное наполнение кордонов подходит для длительного проживания. Есть жилые инспекторские дома, санузлы.
+          </p>
+        </div>
+      </div>
+  </section>
