--- a/src/app/info/info.component.css
+++ b/src/app/info/info.component.css
@@ -39,7 +39,8 @@ body {
     z-index: 10;
     width: 86%;
     padding: 20px;
-    background: #DEB887;
+    /* background: #DEB887; */
+    background: #A5B585;
     transform: translate3d(-100%, 0, 0);
     transition: transform .5s cubic-bezier(.33, .02, 0, .93);
 }
@@ -54,7 +55,8 @@ body {
     top: 0;
     left: 0;
     z-index: 5;
-    background: #8B4513;
+    /* background: #8B4513; */
+    background: #3A4140;
     transform: translate3d(-100%, 0, 0);
     transition: transform .4s cubic-bezier(.33, .02, 0, .93) .2s;
 }
