--- a/src/app/shared/components/main-header/main-header.component.css
+++ b/src/app/shared/components/main-header/main-header.component.css
@@ -1,16 +1,20 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 .header{
     margin:0;
-    /* padding:-10px; */
-    width:101%;
-    height:130px;
+    width:100%;
+    height:100px;
     /* background:#006E4A; */
-    background: #008B8B;
+    background: #3A4140;
     display:flex;
 }
 .header_menu{
     display:flex;
     flex-direction: row;
     flex-grow: 1;
+    align-content: center;
 }
 .header_menu ul{
     display: flex;
@@ -32,7 +36,7 @@
     border-bottom: 1px solid #FFFFFF;
 }
 .volunteer-form{
-    background: #2F4F4F;
+    background: #A5B585;
     padding:15px;
     border-radius: 15px;
 }
