--- a/src/app/shared/components/slider/slider.component.html
+++ b/src/app/shared/components/slider/slider.component.html
@@ -2,7 +2,13 @@
   <owl-carousel-o [options]="customOptions" class="slider">
   <ng-template carouselSlide>
       <div class="slide odd-slide">
-        <img src="../../assets/images/test3.jpg">
+        <div class="image image1">
+          <img src="../../assets/images/sign-up-4.png">
+          <div>
+            Illustration by <a href="https://icons8.com/illustrations/author/5dbbfa4a01d0360016456d51">Murat Kalkavan</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+          </div>
+        </div>
+        
         <div class="text-wrapper">
           <h1>
           Шаг 1 - Заполнение анкеты
@@ -22,7 +28,12 @@
     </ng-template>  
   <ng-template carouselSlide>
     <div class="slide honest-slide">
-      <img src="../../assets/images/test3.jpg">
+      <div class="image image2">
+        <img src="../../assets/images/flamenco-664.png">
+        <div>
+          Illustration by <a href="https://icons8.com/illustrations/author/5eb29f8301d0360018f18b01">Maria Shukshina</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+        </div>
+      </div>
         <div class="text-wrapper">
           <h1>
           Шаг 2 - Прохождение курса
@@ -39,7 +50,12 @@
     </ng-template>  
   <ng-template carouselSlide>
     <div class="slide odd-slide">
-      <img src="../../assets/images/test3.jpg">
+      <div class="image image3">
+        <img src="../../assets/images/flamenco-ongoing-tasks1.png">
+        <div>
+          Illustration by <a href="https://icons8.com/illustrations/author/5e7e24ce01d0360013bb7479">Natasha Remarchuk</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+        </div>
+      </div>
       <div class="text-wrapper">
         <h1>
         Шаг 3 - Необходимые документы
@@ -64,7 +80,12 @@
     </ng-template> 
     <ng-template carouselSlide>
       <div class="slide honest-slide">
-        <img src="../../assets/images/test3.jpg">
+        <div class="image image4">
+          <img src="../../assets/images/flamenco-290.png">
+          <div>
+            Illustration by <a href="https://icons8.com/illustrations/author/5c07e68d82bcbc0092519bb6">Icons 8</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+          </div>
+        </div>
           <div class="text-wrapper">
             <h1>
             Шаг 4 - Подписание договора
@@ -86,7 +107,12 @@
       </ng-template>
       <ng-template carouselSlide>
         <div class="slide odd-slide">
-          <img src="../../assets/images/test3.jpg">
+          <div class="image image5">
+            <img src="../../assets/images/flamenco-waiting.png">
+            <div>
+              Illustration by <a href="https://icons8.com/illustrations/author/5dbbfa4a01d0360016456d51">Murat Kalkavan</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+            </div>
+          </div>
           <div class="text-wrapper">
             <h1>
             Шаг 5 - Поставновка в график
@@ -102,7 +128,12 @@
       </ng-template>  
       <ng-template carouselSlide>
         <div class="slide honest-slide">
-          <img src="../../assets/images/test3.jpg">
+          <div class="image image6">
+            <img src="../../assets/images/flamenco-your-driver-is-here.png">
+            <div>
+              Illustration by <a href="https://icons8.com/illustrations/author/5e7e24ce01d0360013bb7479">Natasha Remarchuk</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+            </div>
+          </div>
             <div class="text-wrapper">
               <h1>
               Шаг 6 - Отправка на кордон
@@ -119,7 +150,12 @@
       </ng-template>
       <ng-template carouselSlide>
         <div class="slide odd-slide">
-          <img src="../../assets/images/test3.jpg">
+          <div class="image image7">
+            <img src="../../assets/images/flamenco-285.png">
+            <div>
+              Illustration by <a href="https://icons8.com/illustrations/author/5c07e68d82bcbc0092519bb6">Icons 8</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+            </div>
+          </div>
           <div class="text-wrapper">
             <h1>
             Шаг 7 - Работа на территориях
@@ -136,7 +172,12 @@
       </ng-template>
       <ng-template carouselSlide>
         <div class="slide honest-slide">
-          <img src="../../assets/images/test3.jpg">
+          <div class="image image8">
+            <img src="../../assets/images/flamenco-done.png">
+            <div>
+              Illustration by <a href="https://icons8.com/illustrations/author/5dbbfa4a01d0360016456d51">Murat Kalkavan</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
+            </div>
+          </div>
             <div class="text-wrapper">
               <h1>
               Шаг 8 - Отчет и отзыв
