--- a/src/app/shared/components/slider/slider.component.css
+++ b/src/app/shared/components/slider/slider.component.css
@@ -13,9 +13,38 @@
     padding:25px;
     border-radius: 10px;
 }
-.slide img{
-    max-width: 700px;
+.slide .image{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    padding:30px;
+    width:600px;
     height:550px;
+}
+.slide .image1 img{
+    width:400px;
+}
+.slide .image2 img{
+    width:500px;
+}
+.slide .image3 img{
+    width:600px;
+}
+.slide .image4 img{
+    width:400px;
+}
+.slide .image5 img{
+    width:500px;
+}
+.slide .image6 img{
+    width:600px;
+}
+.slide .image7 img{
+    width:500px;
+}
+.slide .image8 img{
+    width:500px;
 }
 .text-wrapper{
     display:flex;
