--- a/src/app/shared/components/slider/slider.component.html
+++ b/src/app/shared/components/slider/slider.component.html
@@ -3,10 +3,10 @@
   <ng-template carouselSlide>
       <div class="slide odd-slide">
         <div class="image image1">
-          <img src="../../assets/images/sign-up-4.png">
-          <div>
+          <img src="../../assets/images/1-слайд.png">
+          <!-- <div>
             Illustration by <a href="https://icons8.com/illustrations/author/5dbbfa4a01d0360016456d51">Murat Kalkavan</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
-          </div>
+          </div> -->
         </div>
         
         <div class="text-wrapper">
@@ -29,10 +29,10 @@
   <ng-template carouselSlide>
     <div class="slide honest-slide">
       <div class="image image2">
-        <img src="../../assets/images/flamenco-664.png">
-        <div>
+        <img src="../../assets/images/2-слайд2.png">
+        <!-- <div>
           Illustration by <a href="https://icons8.com/illustrations/author/5eb29f8301d0360018f18b01">Maria Shukshina</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
-        </div>
+        </div> -->
       </div>
         <div class="text-wrapper">
           <h1>
@@ -51,10 +51,10 @@
   <ng-template carouselSlide>
     <div class="slide odd-slide">
       <div class="image image3">
-        <img src="../../assets/images/flamenco-ongoing-tasks1.png">
-        <div>
+        <img src="../../assets/images/3-слайд2.png">
+        <!-- <div>
           Illustration by <a href="https://icons8.com/illustrations/author/5e7e24ce01d0360013bb7479">Natasha Remarchuk</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
-        </div>
+        </div> -->
       </div>
       <div class="text-wrapper">
         <h1>
@@ -81,10 +81,10 @@
     <ng-template carouselSlide>
       <div class="slide honest-slide">
         <div class="image image4">
-          <img src="../../assets/images/flamenco-290.png">
-          <div>
+          <img src="../../assets/images/сладй-4.png">
+          <!-- <div>
             Illustration by <a href="https://icons8.com/illustrations/author/5c07e68d82bcbc0092519bb6">Icons 8</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
-          </div>
+          </div> -->
         </div>
           <div class="text-wrapper">
             <h1>
@@ -129,10 +129,10 @@
       <ng-template carouselSlide>
         <div class="slide honest-slide">
           <div class="image image6">
-            <img src="../../assets/images/flamenco-your-driver-is-here.png">
-            <div>
+            <img src="../../assets/images/слайд-6.png">
+            <!-- <div>
               Illustration by <a href="https://icons8.com/illustrations/author/5e7e24ce01d0360013bb7479">Natasha Remarchuk</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
-            </div>
+            </div> -->
           </div>
             <div class="text-wrapper">
               <h1>
@@ -151,10 +151,10 @@
       <ng-template carouselSlide>
         <div class="slide odd-slide">
           <div class="image image7">
-            <img src="../../assets/images/flamenco-285.png">
-            <div>
+            <img src="../../assets/images/слайд-7ai.png">
+            <!-- <div>
               Illustration by <a href="https://icons8.com/illustrations/author/5c07e68d82bcbc0092519bb6">Icons 8</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
-            </div>
+            </div> -->
           </div>
           <div class="text-wrapper">
             <h1>
