--- a/src/app/shared/components/slider/slider.component.html
+++ b/src/app/shared/components/slider/slider.component.html
@@ -108,10 +108,10 @@
       <ng-template carouselSlide>
         <div class="slide odd-slide">
           <div class="image image5">
-            <img src="../../assets/images/flamenco-waiting.png">
-            <div>
+            <img src="../../assets/images/слайд-5.png">
+            <!-- <div>
               Illustration by <a href="https://icons8.com/illustrations/author/5dbbfa4a01d0360016456d51">Murat Kalkavan</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
-            </div>
+            </div> -->
           </div>
           <div class="text-wrapper">
             <h1>
@@ -173,10 +173,10 @@
       <ng-template carouselSlide>
         <div class="slide honest-slide">
           <div class="image image8">
-            <img src="../../assets/images/flamenco-done.png">
-            <div>
+            <img src="../../assets/images/слайд-8.png">
+            <!-- <div>
               Illustration by <a href="https://icons8.com/illustrations/author/5dbbfa4a01d0360016456d51">Murat Kalkavan</a> from <a href="https://icons8.com/illustrations">Ouch!</a>
-            </div>
+            </div> -->
           </div>
             <div class="text-wrapper">
               <h1>
