--- a/src/app/shared/components/slider/slider.component.css
+++ b/src/app/shared/components/slider/slider.component.css
@@ -31,9 +31,9 @@
 .slide .image4 img{
     width:600px;
 }
-.slide .image5 img{
-    width:500px;
-    margin: 0 30px 20px 0;
+.slide .image5{
+    margin-right:30px;
+    margin-left:30px;
 }
 .slide .image6 img{
     width:600px;
@@ -41,8 +41,10 @@
 .slide .image7 img{
     width:500px;
 }
-.slide .image8 img{
-    width:500px;
+.slide .image8{
+    width:700px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 .text-wrapper{
     display:flex;
